Fixed bug where the ID of the post was being set to a random UUID. Fetches comments for a post correctly.

--- a/ZipR/ZipR/Base.lproj/Main.storyboard
+++ b/ZipR/ZipR/Base.lproj/Main.storyboard
@@ -322,6 +322,7 @@
                     </view>
                     <connections>
                         <outlet property="authorLabel" destination="oQv-TB-bdW" id="ZDa-eY-oJn"/>
+                        <outlet property="commentTableView" destination="OdI-Vx-ZU4" id="hHB-v2-bUH"/>
                         <outlet property="descriptionLabel" destination="kv4-cH-rlm" id="FMM-6P-DQd"/>
                         <outlet property="titleLabel" destination="mQK-gU-emr" id="RnA-Yq-M98"/>
                     </connections>
