--- a/ZipR/ZipR/Base.lproj/Main.storyboard
+++ b/ZipR/ZipR/Base.lproj/Main.storyboard
@@ -326,6 +326,7 @@
                         <outlet property="commentTableView" destination="OdI-Vx-ZU4" id="hHB-v2-bUH"/>
                         <outlet property="commentTextField" destination="8tE-c0-Jyw" id="ECF-ze-pUo"/>
                         <outlet property="descriptionLabel" destination="kv4-cH-rlm" id="FMM-6P-DQd"/>
+                        <outlet property="tagView" destination="dX9-Ai-OGf" id="DEI-6t-nEO"/>
                         <outlet property="titleLabel" destination="mQK-gU-emr" id="RnA-Yq-M98"/>
                     </connections>
                 </viewController>
